<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="CWID">CWID</string>
    <string name="button_submit">Submit</string>
    <string name="scan_results">Scan Results:</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="attendance">Attendance</string>
</resources>
